The downloading basically works. But - hash unchecked - download even if we already have the file - does not have a way to list the directory -- need the manifests' addresses

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,12 +11,14 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+		<!-- manifest view/edit -->
 		<activity android:name="ManifestEditorActivity"
 			android:label="@string/me_name" />
-		<activity android:name="ManifestViewActivity"
-			android:label="@string/mv_name" />
-
+		<activity android:name="ManifestViewActivity" android:label="@string/mv_name" />
 
 	</application>
+
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
